--- a/JSCan2.html
+++ b/JSCan2.html
@@ -2,16 +2,22 @@
 <html lang="da" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="JSCan2.css">
     <title></title>
   </head>
   <body>
-    <div id="left">
-      <canvas id="room"></canvas>
-    </div>
-    <div id="right">
+    <section id="wrapper">
 
-    </div>
+      <div id="left">
+        <canvas id="room" class="canvas" width='400' height='400'></canvas>
+      </div>
 
+
+      <div id="right">
+        <canvas id="toolbox" class="canvas" width='400' height='400'></canvas>
+      </div>
+
+    </section>
     <script src="JSCan2.js"></script>
   </body>
 </html>
